--- a/src/components/ListItem/ListItem.scss
+++ b/src/components/ListItem/ListItem.scss
@@ -27,12 +27,56 @@
         width: 325px;
         height: 300px;
         position: absolute;
-        top: -100px;
+        top: -150px;
         -webkit-box-shadow: 0px 0px 15px 2px rgba(255,255,255,0.1); 
         box-shadow: 0px 0px 15px 2px rgba(255,255,255,0.1);
         img {
             width: 100%;
             height: 50%;
+        }
+    }
+
+    .itemInfo {
+        display: flex;
+        flex-direction: column;
+        padding: 5px;
+        
+        .icons {
+            display: flex;
+            margin-bottom: 10px;
+
+            .icon {
+                border: 2px solid white;
+                padding: 5px;
+                border-radius: 50%;
+                margin-right: 10px;
+                font-size: 16px;
+            }
+        }
+
+        .itemInfoTop {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            font-size: 14px;
+            font-weight: 600;
+            color: gray;
+
+            .contentRating {
+                border: 1px solid gray;
+                padding: 1px 3px;
+                margin: 0px 10px;
+            }
+        }
+
+        .desc {
+            font-size: 13px;
+            margin-bottom: 10px;
+        }
+        
+        .genre {
+            font-size: 14px;
+            color: lightgray;
         }
     }
 }
